# gazebo_differential_drive_robot_4wheel

./: CMakeLists.txt  README.md  package.xml  requirements.txt
config/: gz_bridge.yaml  gz_bridge_qos.yaml  gz_bridge_ugv.yaml  gz_bridge_ugv_gt.yaml
launch/: robot.launch.py  ugv.launch.py  ugv_gt.launch.py
model/: robot.urdf  robot.xacro  robot.xacro.bak  robot_third_person.xacro  ugv.low_noise.xacro  ugv.xacro
src/: gt_bridge_node.cpp  reset_and_respawn_node.cpp
worlds/: ugv_world.world  ugv_world_old.world
